syntax = "proto3";

package auth;

option go_package = "./pb";

message LoginReq {
  string email = 1;
  string password = 2;
}

message LoginRes {
  string access_token = 1;
}

message RegisterReq{
  string name = 1;
  string current_job = 2;
  int32 age = 3;
  string email = 4;
  string password = 5;
}

message RegisterRes{
  uint32 id = 1;
  string name = 2;
  string current_job = 3;
  int32 age = 4;
  string email = 5;
}

service AuthService {
  rpc Login (LoginReq) returns (LoginRes);
  rpc Register (RegisterReq) returns (RegisterRes);
}


